@@ -287,37 +287,6 @@ span.subpages {
 	margin: 0;
 	padding: 0;
 }
-.success {
-	color: green;
-	font-size: larger;
-}
-.error {
-	color: red;
-	font-size: larger;
-}
-.errorbox, .successbox {
-	font-size: larger;
-	border: 2px solid;
-	padding: .5em 1em;
-	float: left;
-	margin-bottom: 2em;
-	color: #000;
-}
-.errorbox {
-	border-color: red;
-	background-color: #fff2f2;
-}
-.successbox {
-	border-color: green;
-	background-color: #dfd;
-}
-.errorbox h2, .successbox h2 {
-	font-size: 1em;
-	font-weight: bold;
-	display: inline;
-	margin: 0 .5em 0 0;
-	border: none;
-}
 
 .catlinks {
 	border: 1px solid #aaa;
